--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -21,7 +21,11 @@
       </div>
 
       <!-- found-items should be implemented as a component -->
-      <found-items items="narrowCtrl.found" on-remove="narrowCtrl.removeItem(index)"></found-items>
+      <found-items
+        items="narrowCtrl.found"
+        list-is-empty="narrowCtrl.listIsEmpty"
+        on-remove="narrowCtrl.removeItem(index)">
+      </found-items>
     </div>
 
   </body>
