fixed item removal

--- a/module3_solution/founditems.template.html
+++ b/module3_solution/founditems.template.html
@@ -9,7 +9,7 @@
         {{item.name}}
         <span class="menu-item-short-name">
           ({{item.short_name}})
-          <button ng-click="fiCtrl.onRemove({index:'$index'})">Don't want this one!</button>
+          <button ng-click="fiCtrl.onRemove({index:$index})">Don't want this one!</button>
         </span>
       </div>
       <p>
