added symbol for required fields

--- a/module5_solution/src/public/sign-up/sign-up.template.html
+++ b/module5_solution/src/public/sign-up/sign-up.template.html
@@ -14,7 +14,7 @@
           required
           maxlength="50"
         />
-        First name
+        First name*
         <span class="form-error"
           ng-if="signupForm.fname.$error.maxlength
           && signupForm.fname.$touched">
@@ -32,7 +32,7 @@
           required
           maxlength="50"
         />
-        Last name
+        Last name*
         <span class="form-error"
           ng-if="signupForm.lname.$error.maxlength
           && signupForm.lname.$touched">
@@ -49,7 +49,7 @@
           ng-model="signupCtrl.user.email"
           required
         />
-        Email address
+        Email address*
         <span class="form-error"
           ng-if="signupForm.email.$invalid
           && !signupForm.email.$error.required
@@ -80,7 +80,7 @@
           ng-model="signupCtrl.user.dish"
           required
         />
-        Favorite dish (menu number)
+        Favorite dish (menu number)*
         <span class="form-error"
           ng-if="signupForm.dish.$error.required
           && signupForm.dish.$touched">
